Separated the Models in different files

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,10 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/PBL/Uploads/711e0ce8-90b9-4b58-9069-d69f359d00d6.jpg
+/PBL/Uploads/48eaff04-1cce-43d3-83fd-075987cf3cdf.jpg
+/PBL/Uploads/3cd6e3f7-742a-4ba2-956b-3fa240fdbae3.jpg
+/PBL/Uploads/171de024-40cc-433b-a89c-bc0ca272beb0.jpg
+/PBL/Uploads/11da410e-8e91-4feb-81bd-4472844c055f.jpg
+/PBL/Uploads/0c38ba43-5f36-4cd6-9e58-dfc5ec2c5ce4.jpg
+/PBL/PBL.rar
