Added a new type of Assignment(Text upload), implemented a Turn-In function and a Revert Turn-In function

--- a/.gitignore
+++ b/.gitignore
@@ -368,3 +368,4 @@ FodyWeavers.xsd
 /PBL/Uploads/11da410e-8e91-4feb-81bd-4472844c055f.jpg
 /PBL/Uploads/0c38ba43-5f36-4cd6-9e58-dfc5ec2c5ce4.jpg
 /PBL/PBL.rar
+/PBL/Uploads/e1403339-c090-4e20-87c3-768dc26bab51.docx
