Implemented Repository-Service pattern for comments and projects

--- a/.gitignore
+++ b/.gitignore
@@ -369,3 +369,6 @@ FodyWeavers.xsd
 /PBL/Uploads/0c38ba43-5f36-4cd6-9e58-dfc5ec2c5ce4.jpg
 /PBL/PBL.rar
 /PBL/Uploads/e1403339-c090-4e20-87c3-768dc26bab51.docx
+/PBL/Uploads/bec877ab-6d6e-49cb-84ac-17f0a2cfb3b4.docx
+/PBL/Uploads/627bd3d9-d45c-40ac-905d-f47ef21e4ee7.pdf
+/PBL/Uploads/5f58aaa8-06a9-43b9-b8c8-4634818be9e7.sql
