Updated Assignments and Files to use Repository-Service pattern

--- a/.gitignore
+++ b/.gitignore
@@ -372,3 +372,7 @@ FodyWeavers.xsd
 /PBL/Uploads/bec877ab-6d6e-49cb-84ac-17f0a2cfb3b4.docx
 /PBL/Uploads/627bd3d9-d45c-40ac-905d-f47ef21e4ee7.pdf
 /PBL/Uploads/5f58aaa8-06a9-43b9-b8c8-4634818be9e7.sql
+/PBL/Uploads/f45de3f4-7bd6-4b4f-afbc-fb7028c94d88.pptx
+/PBL/Uploads/c625c2e8-0e6a-4efc-87af-c930a918cdca.pptx
+/PBL/Uploads/3dc2b2f0-5103-47e2-ace6-90c63afd5d7a.pptx
+/PBL/Proiect 1 - 17.05.2023.3
